force-app/main/default/objects/Int_OLMN_AP__c/Int_OLMN_AP__c.object-meta.xml
<CustomObject>
    <description>This contains interface ap information headed to newco oracle

MD50 - Interface GLBLxxxx – AP Payments to NEWCO</description>
    <label>Int OLMN AP</label>
    <nameField>
        <displayFormat>AP-{00000000}</displayFormat>
        <label>Int OLMN AP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int OLMN AP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>