force-app/main/default/objects/Int_OLMN_AP__c/fields/Accounting_Date__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Date__c</fullName>
    <label>Accounting Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>