force-app/main/default/objects/Int_OLMN_AP__c/fields/ACCTS_PAY_CODE_COMBINATION__c.field-meta.xml
<CustomField>
    <fullName>ACCTS_PAY_CODE_COMBINATION__c</fullName>
    <label>ACCTS PAY CODE COMBINATION</label>
    <length>50</length>
    <type>Text</type>
</CustomField>