force-app/main/default/objects/Int_OLMN_AP__c/fields/Application_Branch__c.field-meta.xml
<CustomField>
    <fullName>Application_Branch__c</fullName>
    <label>Application Branch</label>
    <length>3</length>
    <type>Text</type>
</CustomField>