force-app/main/default/objects/Int_OLMN_AP__c/fields/Approval_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Approval_Company_Code__c</fullName>
    <label>Approval Company Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>