force-app/main/default/objects/Int_OLMN_AP__c/fields/Check_Stock__c.field-meta.xml
<CustomField>
    <fullName>Check_Stock__c</fullName>
    <label>Check Stock</label>
    <length>10</length>
    <type>Text</type>
</CustomField>