force-app/main/default/objects/Int_OLMN_AP__c/fields/DIST_CODE_COMBINATION__c.field-meta.xml
<CustomField>
    <fullName>DIST_CODE_COMBINATION__c</fullName>
    <label>DIST CODE COMBINATION</label>
    <length>50</length>
    <type>Text</type>
</CustomField>