force-app/main/default/objects/Int_OLMN_AP__c/fields/Funding_Method__c.field-meta.xml
<CustomField>
    <fullName>Funding_Method__c</fullName>
    <description>Is Check Send RM
If ACH Send AC
If Wire Send WI</description>
    <label>Funding Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RM</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>WI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>