force-app/main/default/objects/Int_OLMN_AP__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <label>Funding Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>