force-app/main/default/objects/Int_OLMN_AP__c/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <label>Funding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASSET</fullName>
            </value>
            <value>
                <fullName>PASSTHROUGH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>