force-app/main/default/objects/Int_OLMN_AP__c/fields/General_Ledger_Account_String__c.field-meta.xml
<CustomField>
    <fullName>General_Ledger_Account_String__c</fullName>
    <label>General Ledger Account String</label>
    <length>36</length>
    <type>Text</type>
</CustomField>