force-app/main/default/objects/Int_OLMN_AP__c/fields/GL_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Date__c</fullName>
    <label>GL Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>