force-app/main/default/objects/Int_OLMN_AP__c/fields/Invoice_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Currency_Code__c</fullName>
    <label>Invoice Currency Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>