force-app/main/default/objects/Int_OLMN_AP__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Ap interface Date. This is the date of the file being sent</description>
    <label>Invoice Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>