force-app/main/default/objects/Int_OLMN_AP__c/fields/INVOICE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_DESCRIPTION__c</fullName>
    <label>INVOICE DESCRIPTION</label>
    <length>100</length>
    <type>Text</type>
</CustomField>