force-app/main/default/objects/Int_OLMN_AP__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>