force-app/main/default/objects/Int_OLMN_AP__c/fields/Invoice_Type_Lookup_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type_Lookup_Code__c</fullName>
    <label>Invoice Type Lookup Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>