force-app/main/default/objects/Int_OLMN_AP__c/fields/LINE_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>LINE_AMOUNT__c</fullName>
    <label>LINE AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>