force-app/main/default/objects/Int_OLMN_AP__c/fields/LINE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>LINE_DESCRIPTION__c</fullName>
    <label>LINE DESCRIPTION</label>
    <length>50</length>
    <type>Text</type>
</CustomField>