force-app/main/default/objects/Int_OLMN_AP__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>