force-app/main/default/objects/Int_OLMN_AP__c/fields/LINE_TYPE_LOOKUP_CODE__c.field-meta.xml
<CustomField>
    <fullName>LINE_TYPE_LOOKUP_CODE__c</fullName>
    <label>LINE TYPE LOOKUP CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>