force-app/main/default/objects/Int_OLMN_AP__c/fields/PAY_GROUP_LOOKUP_CODE__c.field-meta.xml
<CustomField>
    <fullName>PAY_GROUP_LOOKUP_CODE__c</fullName>
    <label>PAY GROUP LOOKUP CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>