force-app/main/default/objects/Int_OLMN_AP__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>Payment Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>