force-app/main/default/objects/Int_OLMN_AP__c/fields/Payment_Message__c.field-meta.xml
<CustomField>
    <fullName>Payment_Message__c</fullName>
    <label>Payment Message</label>
    <length>60</length>
    <type>Text</type>
</CustomField>