force-app/main/default/objects/Int_OLMN_AP__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>WIRE</fullName>
            </value>
            <value>
                <fullName>CHECK</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
                <isActive>false</isActive>
                <label>AC</label>
            </value>
            <value>
                <fullName>RM</fullName>
                <isActive>false</isActive>
                <label>RM</label>
            </value>
            <value>
                <fullName>WI</fullName>
                <isActive>false</isActive>
                <label>WI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>