force-app/main/default/objects/Int_OLMN_AP__c/fields/Related_record_id__c.field-meta.xml
<CustomField>
    <fullName>Related_record_id__c</fullName>
    <description>Id of the related LS contract/dealer funding/disbursement record</description>
    <label>Related record id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>