force-app/main/default/objects/Int_OLMN_AP__c/fields/Routing_Code__c.field-meta.xml
<CustomField>
    <fullName>Routing_Code__c</fullName>
    <label>Routing Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>