force-app/main/default/objects/Int_OLMN_AP__c/fields/Session_Reference__c.field-meta.xml
<CustomField>
    <fullName>Session_Reference__c</fullName>
    <label>Session Reference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>