force-app/main/default/objects/Int_OLMN_AP__c/fields/Single_Payment_Flag__c.field-meta.xml
<CustomField>
    <fullName>Single_Payment_Flag__c</fullName>
    <label>Single Payment Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>