force-app/main/default/objects/Int_OLMN_AP__c/fields/Term_Name__c.field-meta.xml
<CustomField>
    <fullName>Term_Name__c</fullName>
    <label>Term Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>