force-app/main/default/objects/Int_OLMN_AP__c/fields/Terms_Date__c.field-meta.xml
<CustomField>
    <fullName>Terms_Date__c</fullName>
    <label>Terms Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>