force-app/main/default/objects/Int_OLMN_AP__c/fields/Vendor_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Code__c</fullName>
    <description>External Reference (BEAP) Defined to the Customer Location</description>
    <externalId>true</externalId>
    <label>Vendor Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>