force-app/main/default/objects/Int_OLMN_AP__c/fields/X1099_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>X1099_Tax_Amount__c</fullName>
    <label>1099 Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>