force-app/main/default/objects/Int_OLMN_AP__c/fields/X1099_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>X1099_Tax_Code__c</fullName>
    <label>1099 Tax Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>