force-app/main/default/objects/Int_OLMN_AP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Committed__c</columns>
    <columns>Vendor_Code__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>GL_Date__c</columns>
    <columns>Accounting_Date__c</columns>
    <columns>ACCTS_PAY_CODE_COMBINATION__c</columns>
    <columns>DIST_CODE_COMBINATION__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Expense_Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Contract_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>